; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_is_in_section.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_block_decoder.c_pt_blk_is_in_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_mapped_section = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pt_mapped_section*, i64)* @pt_blk_is_in_section to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pt_blk_is_in_section(%struct.pt_mapped_section* %0, i64 %1) #0 {
  %3 = alloca %struct.pt_mapped_section*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.pt_mapped_section* %0, %struct.pt_mapped_section** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.pt_mapped_section*, %struct.pt_mapped_section** %3, align 8
  %8 = call i64 @pt_msec_begin(%struct.pt_mapped_section* %7)
  store i64 %8, i64* %5, align 8
  %9 = load %struct.pt_mapped_section*, %struct.pt_mapped_section** %3, align 8
  %10 = call i64 @pt_msec_end(%struct.pt_mapped_section* %9)
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = icmp sle i64 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* %6, align 8
  %17 = icmp slt i64 %15, %16
  br label %18

18:                                               ; preds = %14, %2
  %19 = phi i1 [ false, %2 ], [ %17, %14 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i64 @pt_msec_begin(%struct.pt_mapped_section*) #1

declare dso_local i64 @pt_msec_end(%struct.pt_mapped_section*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
